<resources>
    <string name="app_name">Work Local</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tlangelani Hlungwani</string>
    <string name="nav_header_subtitle">felender7@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Resume</string>
    <string name="menu_slideshow">References </string>
    <string name="menu_documents">Documents</string>
    <string name="menu_find_jobs">Find Jobs</string>
    <string name="menu_applied_jobs"> Applied Jobs </string>
    <string name="menu_summery"> Summary</string>
    <string name="welcome_to_work_job_placement">Welcome to @work job placement</string>

    <string-array name="id_passport">
        <item>ID</item>
        <item>Passport</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>

    <string-array name="ethnicity">
        <item >Black</item>
        <item >Coloured</item>
        <item >Indian</item>
        <item >White</item>
        <item >Other</item>
    </string-array>

    <string-array name="disability">
        <item>Not Disable</item>
        <item>Disable</item>
    </string-array>

    <string-array name="job_function">
        <item >Accounting, Auditing</item>
        <item >Admin, Office Support &amp; Services</item>
        <item >Agriculture, Forestry, Environmental &amp; Fishing</item>
        <item >Banking, Finance, Insurance &amp; Stockbroking</item>
        <item >Chemical , Petrochemical, Oil &amp; Gas</item>
    </string-array>


    <string-array name="education">
        <item>Less than high-school</item>
        <item>Matric</item>
        <item>Higher Certificate</item>
        <item>Diploma</item>
        <item>Degree</item>
    </string-array>

</resources>