<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_folder"
            android:title="@string/menu_documents" />

        <item
            android:id="@+id/nav_find_jobs"
            android:icon="@drawable/ic_work"
            android:title="@string/menu_find_jobs" />

        <item
            android:id="@+id/nav_applied_jobs"
            android:icon="@drawable/ic_applied"
            android:title="@string/menu_applied_jobs" />

        <item
            android:id="@+id/nav_summery"
            android:icon="@drawable/ic_file"
            android:title="@string/menu_summery" />
    </group>
</menu>